[project]
name = "movie"
version = "0.2.0"
description = "영화진흥위원회 영화 순위 데이터 처리"
authors = [
    {name = "S00zzang", email = "sujinpark8719561@gmail.com"},
]
dependencies = [
    "requests>=2.32.3",
    "pandas>=2.2.2",
    "numpy>=2.0.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/S00zzang/movie_data"
Issues = "https://github.com/S00zzang/movie_data/issues"


[project.scripts]
mov-ping = "movie.cli:ping"

[tool.pdm]
distribution = true 

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]
